[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "leppard"
dist-name = "leppard"
author = "Harrison Pim"
home-page = "https://github.com/harrisonpim/leppard"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.requires-extra]
dev = [
    "black==19.10b0",
    "flake8==3.8.1",
    "isort==4.3.21",
]
